# Omnomnivore

./: ChangeLog.md  Makefile  Omnomnivore.cabal  README.md  default.nix  package.yaml  release.nix  shell.nix
app/: Main.hs
src/: Lib.hs
src/Omnomnivore/: Graph.hs  Relations.hs
src/Omnomnivore/Nodes/: Ingredient.hs  Step.hs
test/: Test.hs
