cabal-version:      3.0
name:               Omnomnivore
version:            0.1.0.0
synopsis:           Recipes in graph databases. Slurp.

-- A longer description of the package.
-- description:
homepage:           https://github.com/ners/Omnomnivore

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
license-file:       LICENCE
author:             ners
maintainer:         ners@gmx.ch

-- A copyright notice.
-- copyright:
category:           Database
extra-source-files:
    README.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable Omnomnivore
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        Omnomnivore

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite Omnomnivore-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
